--- a/GroceryOTG/res/layout/menu_frame.xml
+++ b/GroceryOTG/res/layout/menu_frame.xml
@@ -4,7 +4,7 @@
     android:id="@+id/menu_frame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_span="2">
+    android:layout_span="2" >
     
     <TableRow
         android:id="@+id/menu_row_1"
@@ -12,7 +12,8 @@
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="@dimen/list_padding"
 	    android:paddingRight="@dimen/list_padding"
-	    android:clickable="true" >
+	    android:clickable="true"
+	    android:background="@android:drawable/list_selector_background" >
 	    
         <ImageView
 		    android:layout_width="wrap_content"
@@ -50,7 +51,8 @@
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="@dimen/list_padding"
 	    android:paddingRight="@dimen/list_padding"
-	    android:clickable="true" >
+	    android:clickable="true"
+	    android:background="@android:drawable/list_selector_background" >
 	    
         <ImageView
 		    android:layout_width="wrap_content"
@@ -88,7 +90,8 @@
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="@dimen/list_padding"
 	    android:paddingRight="@dimen/list_padding"
-	    android:clickable="true" >
+	    android:clickable="true"
+	    android:background="@android:drawable/list_selector_background" >
 	    
         <ImageView
 		    android:layout_width="wrap_content"
@@ -126,7 +129,8 @@
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="@dimen/list_padding"
 	    android:paddingRight="@dimen/list_padding"
-	    android:clickable="true" >
+	    android:clickable="true"
+	    android:background="@android:drawable/list_selector_background" >
 	    
         <ImageView
 		    android:layout_width="wrap_content"
@@ -164,7 +168,8 @@
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="@dimen/list_padding"
 	    android:paddingRight="@dimen/list_padding"
-	    android:clickable="true" >
+	    android:clickable="true"
+	    android:background="@android:drawable/list_selector_background" >
 	    
         <ImageView
 		    android:layout_width="wrap_content"
@@ -202,7 +207,8 @@
 	    android:layout_height="wrap_content"
 	    android:paddingLeft="@dimen/list_padding"
 	    android:paddingRight="@dimen/list_padding"
-	    android:clickable="true" >
+	    android:clickable="true"
+	    android:background="@android:drawable/list_selector_background" >
 	    
         <ImageView
 		    android:layout_width="wrap_content"
