--- a/GroceryOTG/res/layout/about.xml
+++ b/GroceryOTG/res/layout/about.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent" >
+	android:layout_height="match_parent"
+	android:layout_gravity="center"
+	android:orientation="vertical" >
+	    
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:src="@drawable/ic_launcher" >
+    </ImageView>
     
 	<TextView
-	    android:id="@+id/about_text"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
+		android:fontFamily="sans-serif-light"
+		android:textStyle="normal"
+		android:textSize="18sp"
+		android:textIsSelectable="false"
+		android:gravity="center_horizontal"
 	    android:text="@string/about_text" >
 	</TextView>
 		
-</TableLayout>
+</LinearLayout>
