--- a/GroceryOTG/res/layout/grocery_pager.xml
+++ b/GroceryOTG/res/layout/grocery_pager.xml
@@ -15,7 +15,7 @@
 	        android:id="@+id/pager"
 	        android:layout_width="match_parent"
 	        android:layout_height="0px"
-	        android:layout_weight="1">
+	        android:layout_weight="1" >
 	
 	        <android.support.v4.view.PagerTitleStrip
 	            android:id="@+id/pager_title_strip"
@@ -25,7 +25,8 @@
 	            android:background="#33b5e5"
 	            android:textColor="#fff"
 	            android:paddingTop="4dp"
-	            android:paddingBottom="4dp"/>
+	            android:paddingBottom="4dp">
+	        </android.support.v4.view.PagerTitleStrip>
 	    </android.support.v4.view.ViewPager>
 	</LinearLayout>
 	
@@ -34,6 +35,7 @@
 		android:layout_width="240dp"
 		android:layout_height="match_parent"
 		android:layout_gravity="left"
-		android:choiceMode="singleChoice" >
+		android:choiceMode="singleChoice"
+		android:background="#ffffff" >
 	</ListView>
 </android.support.v4.widget.DrawerLayout>
