--- a/GroceryOTG/res/layout/navdrawer_item.xml
+++ b/GroceryOTG/res/layout/navdrawer_item.xml
@@ -10,7 +10,10 @@
 		android:id="@+id/navdrawer_item_icon"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:adjustViewBounds="true" >
+		android:paddingLeft="@dimen/list_padding"
+		android:paddingRight="@dimen/list_padding"
+		android:adjustViewBounds="true"
+		android:gravity="center_vertical" >
 	</ImageView>
 	
 	<TextView
@@ -18,6 +21,10 @@
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:adjustViewBounds="true"
-		android:ellipsize="end" >
+		android:fontFamily="sans-serif-light"
+		android:textStyle="normal"
+		android:textSize="18sp"
+		android:textIsSelectable="false"
+		android:gravity="center_vertical" >
 	</TextView>
 </LinearLayout>
