--- a/GroceryOTG/res/layout/category_activity.xml
+++ b/GroceryOTG/res/layout/category_activity.xml
@@ -19,6 +19,6 @@
 		android:layout_height="match_parent"
 		android:layout_gravity="left"
 		android:choiceMode="singleChoice"
-		android:background="#ffffff" >
+		android:background="#e7e8e9" >
 	</ListView>
 </android.support.v4.widget.DrawerLayout>
