--- a/GroceryOTG/res/layout/navdrawer_item.xml
+++ b/GroceryOTG/res/layout/navdrawer_item.xml
@@ -10,8 +10,7 @@
 		android:id="@+id/navdrawer_item_icon"
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
-		android:paddingLeft="@dimen/list_padding"
-		android:paddingRight="@dimen/list_padding"
+		android:padding="@dimen/navdrawer_icon_padding"
 		android:adjustViewBounds="true"
 		android:gravity="center_vertical" >
 	</ImageView>
