--- a/GroceryOTG/res/values/dimens.xml
+++ b/GroceryOTG/res/values/dimens.xml
@@ -22,5 +22,6 @@
     <dimen name="slidingmenu_item_height">50dp</dimen>
 
     <integer name="num_cols">1</integer>
+    <dimen name="navdrawer_icon_padding">10dp</dimen>
 
 </resources>
