--- a/GroceryOTG/res/layout/map_activity..xml
+++ b/GroceryOTG/res/layout/map_activity..xml
@@ -7,10 +7,16 @@
 	android:layout_height="match_parent" >
 
 	<fragment
+		xmlns:map="http://schemas.android.com/apk/res-auto"
 		android:name="com.groceryotg.android.fragment.MapFragment"
 		android:id="@+id/map_activity_content_fragment"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		map:mapType="normal"
+		map:uiCompass="true"
+		map:uiZoomControls="false"
+		map:uiRotateGestures="false"
+		map:uiTiltGestures="false" >
 	</fragment>
 
 	<ListView
