--- a/GroceryOTG/res/xml/preferences.xml
+++ b/GroceryOTG/res/xml/preferences.xml
@@ -4,12 +4,12 @@
 	android:id="@+id/preference_screen" >
 
     <PreferenceCategory
-        android:title="Notification">
+        android:title="NOTIFICATIONS">
 
         <CheckBoxPreference
             android:key="notification_enabled"
-            android:title="Enable Notification"
-            android:summary="Enables notifications from this application"
+            android:title="@string/setting_notification_enable_title"
+            android:summary="@string/setting_notification_enable_summary"
             android:defaultValue="true" />
 
         <ListPreference
@@ -22,18 +22,16 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="Stores">
+        android:title="CONTENT">
 
         <com.groceryotg.android.utils.MultiSelectListPreference
             android:key="store_select"
             android:title="@string/setting_store_title"
             android:summary="@string/setting_store_summary"
-            android:dialogTitle="@string/setting_store_dialog_title"
+            android:dialogTitle="@string/setting_store_title"
             android:entries="@array/store_names"
             android:entryValues="@array/store_ids"
             android:defaultValue="@string/legacy_store_filter_ids"
             />
-
     </PreferenceCategory>
-
 </PreferenceScreen>
