--- a/GroceryOTG/res/layout/grocery_fragment_list.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:fontFamily="sans-serif-light"
-            android:gravity="center_vertical|left"
+            android:gravity="center"
             android:text="@string/no_new_content"
             android:drawableLeft="@drawable/warning"
             android:drawablePadding="2dip"
