--- a/GroceryOTG/res/layout/grocery_fragment_list.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list.xml
@@ -8,7 +8,7 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" >
     </ListView>
 
     <LinearLayout
@@ -34,7 +34,7 @@
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:text="@string/no_new_content"
-            android:drawableLeft="@drawable/warning"
+            android:drawableLeft="@drawable/ic_menu_about"
             android:drawablePadding="2dip"
             android:paddingLeft="10dip"
             android:paddingRight="10dip"
