--- a/GroceryOTG/res/layout/grocery_fragment_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list_row.xml
@@ -101,8 +101,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:text="0"
-                />
+                android:text="0" >
+            </TextView>
 	        <ImageButton
 	            android:id="@+id/grocery_row_store"
 	            android:layout_width="wrap_content"
