--- a/GroceryOTG/res/layout/shopcart_fragment_list.xml
+++ b/GroceryOTG/res/layout/shopcart_fragment_list.xml
@@ -15,10 +15,10 @@
         android:id="@android:id/empty"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:gravity="center"
         android:text="@string/no_cart_item"
-        android:drawableLeft="@drawable/warning"
+        android:drawableLeft="@drawable/ic_menu_about"
         android:drawablePadding="2dip"
         android:paddingLeft="30dip"
         android:paddingRight="26dip"
