--- a/GroceryOTG/res/layout/splashscreen_activity.xml
+++ b/GroceryOTG/res/layout/splashscreen_activity.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:orientation="vertical"
-              android:background="@drawable/splash_screen_grey" >
-
-    <RelativeLayout
+<RelativeLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical"
+	android:background="@drawable/splash_screen_grey" >
+	
+    <ProgressBar
+        android:id="@+id/loading_progress_bar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-	    <ProgressBar 
-	        android:id="@+id/loading_progress_bar"
-	        style="@android:style/Widget.ProgressBar.Horizontal"
-	        android:layout_width="match_parent"
-	        android:layout_height="5dip"
-	        android:progressDrawable="@xml/progress_bar"
-	        android:layout_alignParentBottom="true" />
-    </RelativeLayout>
-
-</LinearLayout>
+        android:layout_height="5dip"
+        android:progressDrawable="@xml/progress_bar"
+        android:layout_alignParentBottom="true" />
+</RelativeLayout>
