--- a/GroceryOTG/res/layout/category_fragment_list.xml
+++ b/GroceryOTG/res/layout/category_fragment_list.xml
@@ -5,15 +5,18 @@
               android:layout_height="fill_parent"
         >
     
-    <GridView 
+    <GridView
         android:id="@+id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:numColumns="@string/category_grid_width"
+        android:numColumns="auto_fit"
+        android:columnWidth="100dp"
         android:verticalSpacing="5dp"
         android:horizontalSpacing="5dp"
         android:gravity="center"
-        android:padding="10dp" />
+        android:padding="5dp"
+        android:paddingTop="10dp"
+        android:stretchMode="spacingWidthUniform" />
 
     <TextView
         android:id="@+id/empty_category_list"
