--- a/GroceryOTG/res/layout/category_fragment_list_row.xml
+++ b/GroceryOTG/res/layout/category_fragment_list_row.xml
@@ -2,20 +2,20 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:gravity="center_vertical">
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:gravity="bottom" >
 
     <TextView
         android:id="@+id/category_row_label"
         android:layout_width="fill_parent"
-        android:layout_height="110dp"
+        android:layout_height="fill_parent"
+        android:gravity="right"
         android:text="@+id/category_row_text"
         android:textSize="18sp"
         android:fontFamily="sans-serif-light"
         android:textStyle="normal"
         android:textColor="#ffffff"
-        android:gravity="right|bottom"
         android:paddingLeft="10dip"
         android:paddingBottom="5dip"
         android:paddingRight="8dip"
