Shifting text in the grid view up a bit.

--- a/GroceryOTG/res/layout/category_fragment_list_row.xml
+++ b/GroceryOTG/res/layout/category_fragment_list_row.xml
@@ -16,9 +16,9 @@
         android:fontFamily="sans-serif-light"
         android:textStyle="normal"
         android:textColor="#ffffff"
-        android:paddingLeft="10dip"
-        android:paddingBottom="5dip"
-        android:paddingRight="8dip"
+        android:paddingLeft="10dp"
+        android:paddingBottom="2dp"
+        android:paddingRight="8dp"
         android:singleLine="false"
         >
     </TextView>
