--- a/GroceryOTG/res/layout/about_dialog.xml
+++ b/GroceryOTG/res/layout/about_dialog.xml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="83dp"
+    android:layout_gravity="center"
+    android:autoLink="email"
+    android:drawableTop="@drawable/ic_launcher"
+    android:fontFamily="sans-serif-light"
+    android:gravity="left"
+    android:text="@string/about_text"
+    android:textIsSelectable="false"
+    android:textSize="18sp"
+    android:textStyle="normal" android:contentDescription="@string/app_name">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:layout_gravity="center"
-	android:orientation="vertical" >
-	
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:src="@drawable/ic_launcher" >
-    </ImageView>
-    
-	<TextView
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-		android:fontFamily="sans-serif-light"
-		android:textStyle="normal"
-		android:textSize="18sp"
-		android:textIsSelectable="false"
-		android:gravity="center_horizontal"
-	    android:text="@string/about_text" >
-	</TextView>
-</LinearLayout>
+</TextView>
