--- a/GroceryOTG/res/layout/grocery_fragment_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list_row.xml
@@ -6,9 +6,9 @@
 	android:orientation="vertical" >
 	
 	<!-- this is the default view that is initially shown -->
-	<RelativeLayout
+	<LinearLayout
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="fill_parent"
 		android:orientation="horizontal" >
 		
 		<!-- include the generic grocery list item layout -->
@@ -16,15 +16,27 @@
 			layout="@layout/grocery_list_row" >
 		</include>
 		
-		<ImageButton
-			android:id="@+id/expandable_toggle_button"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentBottom="true"
-			android:layout_alignParentRight="true"
-			android:src="@drawable/ic_spinner" >
-		</ImageButton>
-	</RelativeLayout>
+		
+		<RelativeLayout
+			android:layout_width="24dp"
+			android:layout_height="fill_parent" >
+			
+			<ImageButton
+				android:id="@+id/expandable_toggle_button"
+				android:layout_width="match_parent"
+				android:layout_height="fill_parent"
+				android:background="?android:attr/selectableItemBackground" >
+			</ImageButton>
+			
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentBottom="true"
+				android:layout_alignParentRight="true"
+				android:src="@drawable/ic_spinner" >
+			</ImageView>
+		</RelativeLayout>
+	</LinearLayout>
 	
 	<!-- this is the expandable view that is initially hidden and will slide out when the more button is pressed -->
 	<LinearLayout
