--- a/GroceryOTG/res/layout/grocery_fragment_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list_row.xml
@@ -16,31 +16,19 @@
 			layout="@layout/grocery_list_row" >
 		</include>
 		
-		
-		<RelativeLayout
-			android:layout_width="24dp"
-			android:layout_height="fill_parent" >
-			
-			<ImageButton
-				android:id="@+id/expandable_toggle_button"
-				android:layout_width="match_parent"
-				android:layout_height="fill_parent"
-				android:background="?android:attr/selectableItemBackground" >
-			</ImageButton>
-			
-			<ImageView
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_alignParentBottom="true"
-				android:layout_alignParentRight="true"
-				android:src="@drawable/ic_spinner" >
-			</ImageView>
-		</RelativeLayout>
+		<!-- Make a darker grey divider line -->
+		<View
+			android:layout_width="1dp"
+			android:layout_height="match_parent"
+			android:background="#999999" >
+		</View>
 		
 		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="fill_parent"
 			android:layout_gravity="center_vertical"
+			android:paddingRight="4dp"
+			android:paddingLeft="4dp"
 			android:gravity="center_vertical" >
 			
 			<CheckBox
@@ -51,8 +39,6 @@
 				android:background="@null"
 				android:clickable="true"
 				android:contentDescription="@string/groceryoverview_row_imagedesc"
-				android:paddingRight="8dp"
-				android:paddingTop="8dp"
 				android:button="@drawable/ic_checkbox_shoplist" >
 			</CheckBox>
 		</LinearLayout>
