--- a/GroceryOTG/res/layout/grocery_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_row.xml
@@ -100,6 +100,26 @@
 				android:singleLine="false" >
 			</TextView>
         </LinearLayout>
+        
+        <RelativeLayout
+			android:layout_width="24dp"
+			android:layout_height="fill_parent" >
+			
+			<ImageButton
+				android:id="@+id/expandable_toggle_button"
+				android:layout_width="match_parent"
+				android:layout_height="fill_parent"
+				android:background="?android:attr/selectableItemBackground" >
+			</ImageButton>
+			
+			<ImageView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentBottom="true"
+				android:layout_alignParentRight="true"
+				android:src="@drawable/ic_spinner" >
+			</ImageView>
+		</RelativeLayout>
     </TableRow>
     
 	<!-- Hold meta for grocery id -->
