--- a/GroceryOTG/res/layout/grocery_fragment_list_row.xml
+++ b/GroceryOTG/res/layout/grocery_fragment_list_row.xml
@@ -20,7 +20,7 @@
 		<View
 			android:layout_width="1dp"
 			android:layout_height="match_parent"
-			android:background="#999999" >
+			android:background="#e8e8e8" >
 		</View>
 		
 		<LinearLayout
@@ -49,8 +49,14 @@
 		android:id="@+id/expandable"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="horizontal"
+		android:orientation="vertical"
 		android:background="#ffffff" >
+		
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="2dp"
+			android:background="#33b5e5" >
+		</View>
 		
 		<include
 			layout="@layout/grocery_list_expanded_row" >
