--- a/GroceryOTG/res/drawable/ic_checkbox_shoplist.xml
+++ b/GroceryOTG/res/drawable/ic_checkbox_shoplist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+	android:padding="20dp" >
     <item
         android:state_checked="true"
         android:state_focused="true"
