--- a/GroceryOTG/res/layout/grocery_pager_activity.xml
+++ b/GroceryOTG/res/layout/grocery_pager_activity.xml
@@ -22,8 +22,8 @@
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="top"
-	            android:background="#33b5e5"
-	            android:textColor="#fff"
+	            android:background="@color/holo_blue_light"
+	            android:textColor="@color/white"
 	            android:paddingTop="4dp"
 	            android:paddingBottom="4dp">
 	        </android.support.v4.view.PagerTitleStrip>
