--- a/GroceryOTG/res/values/colours.xml
+++ b/GroceryOTG/res/values/colours.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="colours">
-        <item>#dc725e</item>
-        <item>#ec8824</item>
-        <item>#9dd200</item>
-        <item>#21a3db</item>
-        <item>#a8220f</item>
-        <item>#e46414</item>
-        <item>#ef0588</item>
-    </string-array>
+	<!-- A light Holo shade of blue -->
+	<color name="holo_blue_light">#ff33b5e5</color>
+	<!-- A light Holo shade of green -->
+	<color name="holo_green_light">#ff99cc00</color>
+	<!-- A light Holo shade of red -->
+	<color name="holo_red_light">#ffff4444</color>
+	<!-- A dark Holo shade of blue -->
+	<color name="holo_blue_dark">#ff0099cc</color>
+	<!-- A dark Holo shade of green -->
+	<color name="holo_green_dark">#ff669900</color>
+	<!-- A dark Holo shade of red -->
+	<color name="holo_red_dark">#ffcc0000</color>
+	<!-- A Holo shade of purple -->
+	<color name="holo_purple">#ffaa66cc</color>
+	<!-- A light Holo shade of orange -->
+	<color name="holo_orange_light">#ffffbb33</color>
+	<!-- A dark Holo shade of orange -->
+	<color name="holo_orange_dark">#ffff8800</color>
+	<!-- A really bright Holo shade of blue -->
+	<color name="holo_blue_bright">#ff00ddff</color>
+	
+	<color name="white">#ffffffff</color>
+	<color name="black">#ff000000</color>
+	
+	<color name="holo_blue_very_light">#8033b5e5</color>
 </resources>
