--- a/GroceryOTG/res/layout/grocery_list_expanded_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_expanded_row.xml
@@ -1,41 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/grocery_list_expanded_row_layout"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:layout_gravity="center_vertical"
-	android:orientation="horizontal"
-	android:paddingTop="4dp"
-	android:paddingBottom="4dp" >
+	android:id="@+id/expandable"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical"
+	android:background="#ffffff" >
 	
-	<ImageButton
-		android:id="@+id/expand_button_flyerview"
-		android:layout_width="wrap_content"
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="2dp"
+		android:background="#33b5e5" >
+	</View>
+
+	<LinearLayout
+	    android:id="@+id/grocery_list_expanded_row_layout"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:src="@drawable/ic_menu_flyerview"
-		android:background="?android:attr/selectableItemBackground"
-		android:contentDescription="@string/expanded_row_flyerview">
-	</ImageButton>
-    
-	<ImageButton
-		android:id="@+id/expand_button_map"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:src="@drawable/ic_menu_place"
-		android:background="?android:attr/selectableItemBackground"
-		android:contentDescription="@string/expanded_row_map">
-	</ImageButton>
-	
-	<ImageButton
-		android:id="@+id/expand_button_share"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:src="@drawable/ic_menu_share"
-		android:background="?android:attr/selectableItemBackground"
-		android:contentDescription="@string/expanded_row_share">
-	</ImageButton>
+		android:layout_gravity="center_vertical"
+		android:orientation="horizontal"
+		android:paddingTop="4dp"
+		android:paddingBottom="4dp" >
+		
+		<ImageButton
+			android:id="@+id/expand_button_flyerview"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:src="@drawable/ic_menu_flyerview"
+			android:background="?android:attr/selectableItemBackground"
+			android:contentDescription="@string/expanded_row_flyerview">
+		</ImageButton>
+	    
+		<ImageButton
+			android:id="@+id/expand_button_map"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:src="@drawable/ic_menu_place"
+			android:background="?android:attr/selectableItemBackground"
+			android:contentDescription="@string/expanded_row_map">
+		</ImageButton>
+		
+		<ImageButton
+			android:id="@+id/expand_button_share"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:src="@drawable/ic_menu_share"
+			android:background="?android:attr/selectableItemBackground"
+			android:contentDescription="@string/expanded_row_share">
+		</ImageButton>
+	</LinearLayout>
 </LinearLayout>
