--- a/GroceryOTG/res/layout/grocery_list_expanded_row.xml
+++ b/GroceryOTG/res/layout/grocery_list_expanded_row.xml
@@ -10,7 +10,7 @@
 	<View
 		android:layout_width="match_parent"
 		android:layout_height="2dp"
-		android:background="#33b5e5" >
+		android:background="@color/holo_blue_light" >
 	</View>
 
 	<LinearLayout
