--- a/GroceryOTG/res/drawable/ic_checkbox_shoplist_bg.xml
+++ b/GroceryOTG/res/drawable/ic_checkbox_shoplist_bg.xml
@@ -8,10 +8,10 @@
     <item
         android:state_checked="false"
         android:state_focused="true"
-        android:drawable="@android:color/transparent" />
+        android:drawable="@color/semi_transparent" />
     <item
         android:state_checked="false"
-        android:drawable="@android:color/transparent" />
+        android:drawable="@color/semi_transparent" />
     <item
         android:state_checked="true"
         android:drawable="@color/holo_blue_very_light" />
